--- a/index.html
+++ b/index.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="fr">
+
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oh my food</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon//favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicon//site.webmanifest">
+    <title>Oh My Food</title>
     <script src="https://kit.fontawesome.com/e86c6cbeaf.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Ohmyfood</h1>
-    </header>
-    <main>
-        <div class="city">
-            <i class="fas fa-map-marker-alt"></i>
-            <h2>Paris, Belleville</h2>
-        </div>
-        <section class="explorer">
-            <h2>Réservez le menu qui <br> vous convient</h2>
-            <p>Découvrez des restaurants d'exception,<br> séléctionnés par nos soins</p>
-            <button>Explorer nos restaurants</button>
-            <div class="gradient">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
 
-            </div>
-        </section>
-        
-    </main>
-</body>
+  <body id="homepage">
+    <div class="loader"></div>
+    <header>
+      <h1>ohmyfood</h1>
+    </header>
+
+    <div class="city">
+      <i class="fas fa-map-marker-alt"></i>
+      <h2>Paris, Belleville</h2>
+    </div>
+
+    <main>
+      <section class="explorer">
+        <h2>Réservez le menu qui <br>vous convient</h2>
+        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
+        <button>Explorer nos restaurants</button>
+        <div class="gradient">
+
+        </div>
+      </section>
+
+      
+  </body>
+
 </html>
