--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon//favicon-16x16.png">
-    <link rel="manifest" href="./assets/favicon//site.webmanifest">
     <title>Oh My Food</title>
     <script src="https://kit.fontawesome.com/e86c6cbeaf.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
-
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon//favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon//favicon-16x16.png">
+  <link rel="manifest" href="./images/favicon//site.webmanifest">
   <body id="homepage">
     <div class="loader"></div>
     <header>
@@ -38,13 +37,62 @@
       <section class="tuto">
         <h2>Fonctionnement</h2>
         <ol>
-          <li>Choisissez un restaurant</li>
-          <li>Composez votre menu</li>
-          <li>Dégustez au restaurant</li>
+          <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+          <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
+          <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
         </ol>
       </section>
 
-     
+      <section class="menus">
+        <h2>Restaurants</h2>
+        <div class="menus__cards">
+          <a href="#" class="card new">
+            <div class="card__image card__image-1"></div>
+            <div class="card__description">
+              <h3>La palette du goût</h3>
+              <p>Ménilmontant</p>
+            </div>
+          </a>
+          <a href="#" class="card new">
+            <div class="card__image card__image-2"></div>
+            <div class="card__description">
+              <h3>La note enchantée</h3>
+              <p>Charonne</p>
+            </div>
+          </a>
+          <a href="#" class="card">
+            <div class="card__image card__image-3"></div>
+            <div class="card__description">
+              <h3>À la française</h3>
+              <p>Cité Rouge</p>
+            </div>
+          </a>
+          <a href="#" class="card">
+            <div class="card__image card__image-4"></div>
+            <div class="card__description">
+              <h3>Le Délice des sens</h3>
+              <p>Folie-Méricourt</p>
+            </div>
+          </a>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <h2>ohmyfood</h2>
+      <p>
+        <i class="fas fa-utensils"></i>
+        Proposer un restaurant
+      </p>
+      <p>
+        <i class="fas fa-hands-helping"></i>
+        Devenir partenaire
+      </p>
+      <p>Mentions légales</p>
+      <p>
+        <a href="mailto:bahm2062@gmail.com">Contact</a>
+      </p>
+    </footer>
   </body>
 
 </html>
