les pages travail

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
       <section class="explorer">
         <h2>Réservez le menu qui <br>vous convient</h2>
-        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
+        <p>Découvrez des restaurants d'exception,<br> séléctionnés par nos soins</p>
         <button>Explorer nos restaurants</button>
         <div class="gradient">
 
@@ -44,34 +44,34 @@
       </section>
 
       <section class="menus">
-        <h2>Restaurants</h2>
+        <h2 class="titreresto">Restaurants</h2>
         <div class="menus__cards">
-          <a href="./pages/restaurant-1.index.html" class="card new">
+          <a href="./pages/restaurant-1.html" class="card new">
             <div class="card__image card__image-1"></div>
             <div class="card__description">
-              <h3>La palette du goût</h3>
-              <p>Ménilmontant</p>
+              <h3 class="titrecarte1">La palette du goût</h3>
+              <p class="titrecarte2">Ménilmontant</p>
             </div>
           </a>
-          <a href="#" class="card new">
+          <a href="./pages/restaurant-2.html" class="card new">
             <div class="card__image card__image-2"></div>
             <div class="card__description">
-              <h3>La note enchantée</h3>
-              <p>Charonne</p>
+              <h3 class="titrecarte1">La note enchantée</h3>
+              <p class="titrecarte2">Charonne</p>
             </div>
           </a>
-          <a href="#" class="card">
+          <a href="./pages/restaurant-3.html" class="card">
             <div class="card__image card__image-3"></div>
             <div class="card__description">
-              <h3>À la française</h3>
-              <p>Cité Rouge</p>
+              <h3 class="titrecarte1">À la française</h3>
+              <p class="titrecarte2">Cité Rouge</p>
             </div>
           </a>
-          <a href="#" class="card">
+          <a href="./pages/restaurant-4.html" class="card">
             <div class="card__image card__image-4"></div>
             <div class="card__description">
-              <h3>Le Délice des sens</h3>
-              <p>Folie-Méricourt</p>
+              <h3 class="titrecarte1">Le Délice des sens</h3>
+              <p class="titrecarte2">Folie-Méricourt</p>
             </div>
           </a>
         </div>
