--- a/pages/restaurant-4.html
+++ b/pages/restaurant-4.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,12 +18,10 @@
         <h1>ohmyfood</h1>
       </header>
     </a>
-
-    <div class="banner"><img src="../sass/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""></div>
+    <div class="banner"><img src="../sass/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=""></div>
     <div class="resto__title">
-      <h2>La palette du goût</h2>
+      <h2>La note enchantée</h2>
     </div>
-
     <main class="resto-main">
       <section class="menus">
         <div class="menus__category">
@@ -62,7 +59,6 @@
             </div>
           </div>
         </div>
-
         <div class="menus__category">
           <h3>Plats</h3>
           <div class="menu__category__list">
@@ -98,7 +94,6 @@
             </div>
           </div>
         </div>
-
         <div class="menus__category">
           <h3>Desserts</h3>
           <div class="menu__category__list">
@@ -135,14 +130,10 @@
           </div>
         </div>
       </section>
-
       <section class="order">
         <button>Commander</button>
       </section>
-
-
     </main>
-
     <footer>
       <h2>ohmyfood</h2>
       <p>
