--- a/pages/restaurant-2.html
+++ b/pages/restaurant-2.html
@@ -8,19 +8,16 @@
     <script src="https://kit.fontawesome.com/e86c6cbeaf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
   </head>
-  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon//favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon//favicon-16x16.png">
-  <link rel="manifest" href="./images/favicon//site.webmanifest">
+  
   <body id="page-resto">
     <a href="../index.html">
       <header>
         <h1>ohmyfood</h1>
       </header>
     </a>
-    <div class="banner"><img src="../sass/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=""></div>
+    <div class="banner"><img src="../sass/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt=""></div>
     <div class="resto__title">
-      <h2>À la française</h2>
+      <h2>La note enchantée</h2>
     </div>
     <main class="resto-main">
       <section class="menus">
@@ -29,8 +26,8 @@
           <div class="menu__category__list">
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Tartare de poulpe acidulé</h4>
-                <p>Aux zestes d'orange</p>
+                <h4>Ravioles de foie gras</h4>
+                <p>Accompagnés de leur crème à la truffe</p>
               </div>
               <span class="menu-item__price">25€</span>
               <div class="menu-item__check">
@@ -39,8 +36,8 @@
             </div>
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Velouté de légumes d'antan</h4>
-                <p>Carotte, panais, topinambour</p>
+                <h4>Caviar osciètre</h4>
+                <p>Sur blini à la farine de blé noir</p>
               </div>
               <span class="menu-item__price">35€</span>
               <div class="menu-item__check">
@@ -49,8 +46,18 @@
             </div>
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Soupe à l'oignon</h4>
-                <p>Revisitée</p>
+                <h4>Homard et espuma de potiron</h4>
+                <p>Mariné aux zestes d'orange</p>
+              </div>
+              <span class="menu-item__price">35€</span>
+              <div class="menu-item__check">
+                <i class="fas fa-check"></i>
+              </div>
+            </div>
+            <div class="menu-item">
+              <div class="menu-item__description">
+                <h4>Foie gras de canard cuit entier</h4>
+                <p>Confiture de figue et pain toasté</p>
               </div>
               <span class="menu-item__price">20€</span>
               <div class="menu-item__check">
@@ -64,8 +71,8 @@
           <div class="menu__category__list">
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Coquilles Saint-Jacques</h4>
-                <p>Accompagnées d'une purée de panais</p>
+                <h4>Noix de coquilles Saint-Jacques</h4>
+                <p>Sur lit de purée de céleri-rave</p>
               </div>
               <span class="menu-item__price">40€</span>
               <div class="menu-item__check">
@@ -74,8 +81,8 @@
             </div>
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Magret de canard</h4>
-                <p>Et parmentier de pommes de terre</p>
+                <h4>Langoustine poêlée</h4>
+                <p>Purée de patate douce</p>
               </div>
               <span class="menu-item__price">35€</span>
               <div class="menu-item__check">
@@ -84,8 +91,8 @@
             </div>
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Pigeonneau d’Ille-et-Vilaine</h4>
-                <p>Sur son lit de gnocchis aux légumes</p>
+                <h4>Mijoté de queue de boeuf  </h4>
+                <p>Et riz sauvage aux zestes de citron</p>
               </div>
               <span class="menu-item__price">44€</span>
               <div class="menu-item__check">
@@ -99,8 +106,8 @@
           <div class="menu__category__list">
             <div class=" menu-item">
               <div class="menu-item__description">
-                <h4>Pétales de violettes glacés</h4>
-                <p>Et purée de noisettes</p>
+                <h4>Macaron noisette et chocolat</h4>
+                <p>Glace au caramel brun et sel de Guérande</p>
               </div>
               <span class="menu-item__price">18€</span>
               <div class="menu-item__check">
@@ -109,8 +116,8 @@
             </div>
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Fondant au chocolat</h4>
-                <p>Revisité</p>
+                <h4>Baba au rhum revisité</h4>
+                <p>Avec son coulis de citron</p>
               </div>
               <span class="menu-item__price">22€</span>
               <div class="menu-item__check">
@@ -119,8 +126,8 @@
             </div>
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Millefeuille croustillant</h4>
-                <p>Myrtilles et pâte d’amande</p>
+                <h4>Tarte au citron meringuée</h4>
+                <p>Déstructurée</p>
               </div>
               <span class="menu-item__price">23€</span>
               <div class="menu-item__check">
