--- a/pages/restaurant-3.html
+++ b/pages/restaurant-3.html
@@ -8,19 +8,16 @@
     <script src="https://kit.fontawesome.com/e86c6cbeaf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
   </head>
-  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon//favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon//favicon-16x16.png">
-  <link rel="manifest" href="./images/favicon//site.webmanifest">
+
   <body id="page-resto">
     <a href="../index.html">
       <header>
         <h1>ohmyfood</h1>
       </header>
     </a>
-    <div class="banner"><img src="../sass/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt=""></div>
+    <div class="banner"><img src="../sass/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt=""></div>
     <div class="resto__title">
-      <h2>La note enchantée</h2>
+      <h2>À la française</h2>
     </div>
     <main class="resto-main">
       <section class="menus">
@@ -29,8 +26,8 @@
           <div class="menu__category__list">
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Fricassée d'escargot</h4>
-                <p>Au piment d'espelette</p>
+                <h4>Tartare de poulpe acidulé</h4>
+                <p>Aux zestes d'orange</p>
               </div>
               <span class="menu-item__price">25€</span>
               <div class="menu-item__check">
@@ -39,8 +36,8 @@
             </div>
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Foie gras de canard mi-cuit</h4>
-                <p>Et ses copeaux de truffe noire</p>
+                <h4>Velouté de légumes d'antan</h4>
+                <p>Carotte, panais, topinambour</p>
               </div>
               <span class="menu-item__price">35€</span>
               <div class="menu-item__check">
@@ -49,8 +46,8 @@
             </div>
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Oeuf au plat</h4>
-                <p>Assaisonné à la truffe sur lit de poireaux</p>
+                <h4>Soupe à l'oignon</h4>
+                <p>Revisitée</p>
               </div>
               <span class="menu-item__price">20€</span>
               <div class="menu-item__check">
@@ -64,8 +61,8 @@
           <div class="menu__category__list">
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Filet de boeuf aux herbes</h4>
-                <p>Accompagné de sa ribambelle de légumes</p>
+                <h4>Coquilles Saint-Jacques</h4>
+                <p>Accompagnées d'une purée de panais</p>
               </div>
               <span class="menu-item__price">40€</span>
               <div class="menu-item__check">
@@ -74,8 +71,8 @@
             </div>
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Parmentier de queue de boeuf</h4>
-                <p>A la truffe noire sur sa purée de panais</p>
+                <h4>Magret de canard</h4>
+                <p>Et parmentier de pommes de terre</p>
               </div>
               <span class="menu-item__price">35€</span>
               <div class="menu-item__check">
@@ -84,8 +81,8 @@
             </div>
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Filet de Turbot</h4>
-                <p>Aux agrumes</p>
+                <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                <p>Sur son lit de gnocchis aux légumes</p>
               </div>
               <span class="menu-item__price">44€</span>
               <div class="menu-item__check">
@@ -99,8 +96,8 @@
           <div class="menu__category__list">
             <div class=" menu-item">
               <div class="menu-item__description">
-                <h4>Paris-Brest</h4>
-                <p>Revisité</p>
+                <h4>Pétales de violettes glacés</h4>
+                <p>Et purée de noisettes</p>
               </div>
               <span class="menu-item__price">18€</span>
               <div class="menu-item__check">
@@ -109,8 +106,8 @@
             </div>
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Macaron au chocolat d'exception</h4>
-                <p>Et glace à la vanille de Madagascar</p>
+                <h4>Fondant au chocolat</h4>
+                <p>Revisité</p>
               </div>
               <span class="menu-item__price">22€</span>
               <div class="menu-item__check">
@@ -119,8 +116,8 @@
             </div>
             <div class="menu-item">
               <div class="menu-item__description">
-                <h4>Mousse au chocolat</h4>
-                <p>Au piment d'espelette et à la truffe noire</p>
+                <h4>Millefeuille croustillant</h4>
+                <p>Myrtilles et pâte d’amande</p>
               </div>
               <span class="menu-item__price">23€</span>
               <div class="menu-item__check">
