reforme du code

--- a/pages/restaurant-3.html
+++ b/pages/restaurant-3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,10 +12,12 @@
   <body id="page-resto">
     <a href="../index.html">
       <header>
-        <h1>ohmyfood</h1>
+        <div>
+          <img class="img" src="../sass/images/logo/ohmyfood.png" alt="image logo">
+        </div>
       </header>
     </a>
-    <div class="banner"><img src="../sass/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt=""></div>
+    <div class="banner"><img src="../sass/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image A la francaise"></div>
     <div class="resto__title">
       <h2>À la française</h2>
     </div>
@@ -24,7 +26,7 @@
         <div class="menus__category">
           <h3>Entrées</h3>
           <div class="menu__category__list">
-            <div class="menu-item">
+            <div class="menu-item"> 
               <div class="menu-item__description">
                 <h4>Tartare de poulpe acidulé</h4>
                 <p>Aux zestes d'orange</p>
@@ -134,16 +136,18 @@
     <footer>
       <h2>ohmyfood</h2>
       <p>
-        <i class="fas fa-utensils"></i>
-        Proposer un restaurant
+        <i class="fas fa-utensils"></i> 
+        <a href="#"> Proposer un restaurant </a>
       </p>
       <p>
         <i class="fas fa-hands-helping"></i>
-        Devenir partenaire
+        <a href="#">Devenir partenaire </a>
       </p>
-      <p>Mentions légales</p>
       <p>
-        <a href="mailto:bahm2062@gmail.com">Contact</a>
+        <a href="#"> Mentions légales </a>
+      </p>
+      <p>
+        <a href="mailto:bahm2062@gmail.com"> Contact </a>
       </p>
     </footer>
   </body>
