--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
   <body id="homepage">
     <div class="loader"></div>
     <header>
-      <h1>ohmyfood</h1>
+       <div class="logo">
+        <img class="img" src="./sass/images/logo/ohmyfood.png" alt="image logo ">
+       </div>
     </header>
 
-    <div class="city">
-      <i class="fas fa-map-marker-alt"></i>
-      <h2>Paris, Belleville</h2>
-    </div>
-
     <main>
+      <form class="city">
+        <i class="fas fa-map-marker-alt"></i>
+        <h2>Paris, Belleville</h2>
+      </form>
       <section class="explorer">
         <h2>Réservez le menu qui <br>vous convient</h2>
-        <p>Découvrez des restaurants d'exception,<br> séléctionnés par nos soins</p>
+        <p>Découvrez des restaurants d'exception, <br> séléctionnés par nos soins </p> 
         <button>Explorer nos restaurants</button>
         <div class="gradient">
 
@@ -77,16 +78,18 @@
     <footer>
       <h2>ohmyfood</h2>
       <p>
-        <i class="fas fa-utensils"></i>
-        Proposer un restaurant
+        <i class="fas fa-utensils"></i> 
+        <a href="#"> Proposer un restaurant </a>
       </p>
       <p>
         <i class="fas fa-hands-helping"></i>
-        Devenir partenaire
+        <a href="#">Devenir partenaire </a>
       </p>
-      <p>Mentions légales</p>
       <p>
-        <a href="mailto:bahm2062@gmail.com">Contact</a>
+        <a href="#"> Mentions légales </a>
+      </p>
+      <p>
+        <a href="mailto:bahm2062@gmail.com"> Contact </a>
       </p>
     </footer>
   </body>
