--- a/pages/restaurant-1.html
+++ b/pages/restaurant-1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,10 +11,12 @@
   <body id="page-resto">
     <a href="../index.html">
       <header>
-        <h1>ohmyfood</h1>
+        <div>
+          <img class="img" src="../sass/images/logo/ohmyfood.png" alt="image logo">
+        </div>
       </header>
     </a>
-    <div class="banner"><img src="../sass/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt=""></div>
+    <div class="banner"><img src="../sass/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="images-palettes du gout"></div>
     <div class="resto__title">
       <h2>La palette du goût</h2>
     </div>
@@ -133,16 +135,18 @@
     <footer>
       <h2>ohmyfood</h2>
       <p>
-        <i class="fas fa-utensils"></i>
-        Proposer un restaurant
+        <i class="fas fa-utensils"></i> 
+        <a href="#"> Proposer un restaurant </a>
       </p>
       <p>
         <i class="fas fa-hands-helping"></i>
-        Devenir partenaire
+        <a href="#">Devenir partenaire </a>
       </p>
-      <p>Mentions légales</p>
       <p>
-        <a href="mailto:bahm2062@gmail.com">Contact</a>
+        <a href="#"> Mentions légales </a>
+      </p>
+      <p>
+        <a href="mailto:bahm2062@gmail.com"> Contact </a>
       </p>
     </footer>
   </body>
