--- a/pages/restaurant-3.html
+++ b/pages/restaurant-3.html
@@ -10,13 +10,12 @@
   </head>
 
   <body id="page-resto">
-    <a href="../index.html">
       <header>
+        <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
         <div>
           <img class="img" src="../sass/images/logo/ohmyfood.png" alt="image logo">
         </div>
       </header>
-    </a>
     <div class="banner"><img src="../sass/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image A la francaise"></div>
     <div class="resto__title">
       <h2>À la française</h2>
@@ -135,20 +134,12 @@
     </main>
     <footer>
       <h2>ohmyfood</h2>
-      <p>
-        <i class="fas fa-utensils"></i> 
-        <a href="#"> Proposer un restaurant </a>
-      </p>
-      <p>
-        <i class="fas fa-hands-helping"></i>
-        <a href="#">Devenir partenaire </a>
-      </p>
-      <p>
-        <a href="#"> Mentions légales </a>
-      </p>
-      <p>
-        <a href="mailto:bahm2062@gmail.com"> Contact </a>
-      </p>
+      <ol>
+        <li><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+        <li><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></li>
+        <li><a href="#">Mentions légales</a></li>
+        <li><a href="mailto:bahm2062@gmail.com">Contact</a></li>
+      </ol>
     </footer>
   </body>
 
