reforme shemantique pages

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </span>
       </div>
       <section class="explorer">
-        <h2>Réservez le menu qui <br>vous convient</h2>
-        <p>Découvrez des restaurants d'exception, <br> séléctionnés par nos soins </p> 
+        <h2>Réservez le menu qui vous convient</h2>
+        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins </p> 
         <button>Explorer nos restaurants</button>
       </section>
 
@@ -40,39 +40,38 @@
           <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
         </ol>
       </section>
-
       <section class="menus">
         <h2 class="titreresto">Restaurants</h2>
-        <div class="menus__cards">
+        <article class="menus__cards">
           <a href="./pages/restaurant-1.html" class="card new">
             <div class="card__image card__image-1"></div>
-            <div class="card__description">
+            <aside class="card__description">
               <h3 class="titrecarte1">La palette du goût</h3>
               <p class="titrecarte2">Ménilmontant</p>
-            </div>
+            </aside>
           </a>
           <a href="./pages/restaurant-2.html" class="card new">
             <div class="card__image card__image-2"></div>
-            <div class="card__description">
+            <aside class="card__description">
               <h3 class="titrecarte1">La note enchantée</h3>
               <p class="titrecarte2">Charonne</p>
-            </div>
+            </aside>
           </a>
           <a href="./pages/restaurant-3.html" class="card new">
             <div class="card__image card__image-3"></div>
-            <div class="card__description">
+            <aside class="card__description">
               <h3 class="titrecarte1">À la française</h3>
               <p class="titrecarte2">Cité Rouge</p>
-            </div>
+            </aside>
           </a>
           <a href="./pages/restaurant-4.html" class="card new">
             <div class="card__image card__image-4"></div>
-            <div class="card__description">
+            <aside class="card__description">
               <h3 class="titrecarte1">Le Délice des sens</h3>
               <p class="titrecarte2">Folie-Méricourt</p>
-            </div>
+            </aside>
           </a>
-        </div>
+        <article>
       </section>
     </main>
 
