--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
               <p class="titrecarte2">Folie-Méricourt</p>
             </aside>
           </a>
-        <article>
-      </section>
+        </article>
+      </section> 
     </main>
-
     <footer>
       <h2>ohmyfood</h2>
       <ol>
